Most styles done

--- a/html-css-javascript-for-web-devs/module2/index.html
+++ b/html-css-javascript-for-web-devs/module2/index.html
@@ -1,1 +1,59 @@
-Hello world
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Module 2</title>
+  </head>
+  <body>
+    <h1 id="title">Our Menu</h1>
+
+    <div id="wrapper">
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <section class="chicken">
+          <h3>Chicken</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut congue ipsum. Morbi rhoncus sem non
+            turpis ultricies interdum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+            himenaeos. Sed ut tempus lacus. Nulla interdum eu eros viverra rutrum. Cras faucibus bibendum commodo.
+            Etiam semper ex ipsum, ac maximus felis aliquet at. Nam in nisi ullamcorper, condimentum odio nec,
+            scelerisque libero. Proin leo nisi, pharetra ut vestibulum laoreet, lobortis in mauris. Morbi nec tempus
+            ligula. Aenean et sagittis elit, nec euismod sem. Vestibulum in porttitor nisl. Proin non lacus vitae
+            ligula gravida pulvinar sit amet vitae magna. Curabitur sit amet quam diam. Cras lobortis lacus orci, a
+            malesuada leo ullamcorper in.
+          </p>
+        </section>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <section class="beef">
+          <h3>Beef</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut congue ipsum. Morbi rhoncus sem non
+            turpis ultricies interdum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+            himenaeos. Sed ut tempus lacus. Nulla interdum eu eros viverra rutrum. Cras faucibus bibendum commodo.
+            Etiam semper ex ipsum, ac maximus felis aliquet at. Nam in nisi ullamcorper, condimentum odio nec,
+            scelerisque libero. Proin leo nisi, pharetra ut vestibulum laoreet, lobortis in mauris. Morbi nec tempus
+            ligula. Aenean et sagittis elit, nec euismod sem. Vestibulum in porttitor nisl. Proin non lacus vitae
+            ligula gravida pulvinar sit amet vitae magna. Curabitur sit amet quam diam. Cras lobortis lacus orci, a
+            malesuada leo ullamcorper in.
+          </p>
+        </section>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <section class="sushi">
+          <h3>Sushi</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut congue ipsum. Morbi rhoncus sem non
+            turpis ultricies interdum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+            himenaeos. Sed ut tempus lacus. Nulla interdum eu eros viverra rutrum. Cras faucibus bibendum commodo.
+            Etiam semper ex ipsum, ac maximus felis aliquet at. Nam in nisi ullamcorper, condimentum odio nec,
+            scelerisque libero. Proin leo nisi, pharetra ut vestibulum laoreet, lobortis in mauris. Morbi nec tempus
+            ligula. Aenean et sagittis elit, nec euismod sem. Vestibulum in porttitor nisl. Proin non lacus vitae
+            ligula gravida pulvinar sit amet vitae magna. Curabitur sit amet quam diam. Cras lobortis lacus orci, a
+            malesuada leo ullamcorper in.
+          </p>
+        </section>
+      </div>
+    </div>
+  </body>
+</html>
